--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <img src="./imagens/Logo.png" alt="Logo da Alura" />
+      <img src="Logo.png" alt="Logo da Alura" />
     </header>
 
     <main>
